# MimiC

./: .gitignore  CMakeLists.txt  README.md  SysY.md
src/: main.cpp  version.h
src/back/: codegen.cpp  codegen.h
src/back/aarch32/: armv7asm.h  asmgen.cpp  asmgen.h  generator.cpp  generator.h  varalloc.cpp  varalloc.h
src/back/asm/: generator.cpp  generator.h
src/back/c/: generator.cpp  generator.h
src/define/: ast.cpp  ast.h  type.cpp  type.h
src/driver/: compiler.cpp  compiler.h
src/front/: Makefile  gen_test.py  issues.md  lex.yy.c  lexer.cpp  lexer.h  lexer.l  location.hh  logger.cpp  logger.h  myparser  parser.cpp  parser.h  parser.tab.cc  parser.tab.hh  parser.y  parserctx.h  position.hh  stack.hh  test.sh  token.h
src/mid/: analyzer.cpp  analyzer.h  eval.cpp  eval.h  genir.cpp  irbuilder.cpp  irbuilder.h  module.cpp  module.h  sema.cpp  ssa.cpp  ssa.h  usedef.cpp  usedef.h
src/opt/: pass.cpp  pass.h  passman.cpp  passman.h  stage.h
src/opt/analysis/: dominance.cpp  dominance.h  loopinfo.cpp  loopinfo.h
src/opt/helper/: blkiter.cpp  blkiter.h  cast.cpp  cast.h  const.cpp  const.h  dom.cpp  inst.cpp  inst.h  ircopier.cpp  ircopier.h  loop.cpp  loop.h
src/opt/passes/: algesimp.cpp  arrinliner.cpp  blkmerge.cpp  brsimp.cpp  cfgsimp.cpp  constprop.cpp  createcfg.cpp  dce.cpp  dge.cpp  dirtyconv.cpp  div2mul.cpp  globalopt.cpp  gvarinliner.cpp  gvn.cpp  inliner.cpp  instcomb.cpp  irdemo.cpp  licm.cpp  mem2reg.cpp  memlvn.cpp  modsimp.cpp  naiveunroll.cpp  phisimp.cpp  reg2mem.cpp  sccp.cpp  (+1 more)
src/utils/: bitvec.h  hashing.h  strprint.h
(+86 files in other folders)
